@@ -14,12 +14,12 @@ const moment = require('moment');
  */
 
 /**
- * @module logsetup
+ * @module liblogsetup
  *
  * @requires {@link external:winston|winston}
  * @requires {@link external:moment|moment}
  *
- * @copyright Genome Research Limited 2017, 2022
+ * @copyright Genome Research Limited 2022
  */
 
 var getTimeStamp = function() {
@@ -28,7 +28,6 @@ var getTimeStamp = function() {
 
 try {
   LOGGER.add(new LOGGER.transports.Console( {
-    level:     'error',
     colorize:  true,
     json:      false,
     timestamp: getTimeStamp,
