@@ -9,7 +9,7 @@ const path         = require('path');
 const MongoClient  = require('mongodb').MongoClient;
 const util         = require('util');
 
-const LOGGER           = require('winston');
+const LOGGER           = require('../lib/liblogsetup.js');
 const config           = require('../lib/config.js');
 const RangerController = require('../lib/server/controller');
 
