@@ -41,9 +41,9 @@
 const EventEmitter = require('events');
 const url    = require('url');
 
-const LOGGER  = require('winston');
 const request = require('request');
 
+const LOGGER  = require('../liblogsetup.js');
 const config    = require('../config.js');
 const constants = require('../constants.js');
 
