@@ -20,7 +20,7 @@ const assert       = require('assert');
 const send         = require('send');
 const jsonLint     = require('@prantlf/jsonlint');
 const url          = require('url');
-const LOGGER       = require('winston');
+const LOGGER       = require('../liblogsetup.js');
 const DataMapper   = require('./mapper.js');
 const DataAccess   = require('./auth.js');
 const headerEncode = require('./header_encoding.js');
