@@ -19,7 +19,7 @@
  * @copyright Genome Research Limited 2017
  */
 
-const LOGGER  = require('winston');
+const LOGGER  = require('../../liblogsetup.js');
 
 const HTTP_ERROR_TYPES = {
   400: 'BadRequest',
