@@ -39,7 +39,7 @@
  * @copyright Genome Research Limited 2017
  */
 
-const LOGGER       = require('winston');
+const LOGGER       = require('../liblogsetup.js');
 
 const EventEmitter = require('events');
 const path         = require('path');
