@@ -20,7 +20,7 @@ const assert   = require('assert');
 const child    = require('child_process');
 const fse      = require('fs-extra');
 const path     = require('path');
-const LOGGER   = require('winston');
+const LOGGER   = require('../liblogsetup.js');
 const pipeline = require('./pipeline.js');
 const config   = require('../config.js');
 
