@@ -29,7 +29,7 @@
 const EventEmitter = require('events');
 const assert       = require('assert');
 const net          = require('net');
-const LOGGER       = require('winston');
+const LOGGER       = require('../liblogsetup.js');
 
 const config       = require('../config.js');
 
